@@ -1,3 +1,0 @@
-
-void debug_print_trace (int);
-
