@@ -1,3 +1,8 @@
+2004-11-26 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* ospf_main.c: Remove #include "debug.h" (was not being used, and
+	  lib/debug.h has now been deleted).
+
 2004-11-25 Hasso Tepper <hasso at quagga.net>
 
 	* ospf_main.c: Make group to run as configurable.
